# ertsi

generation/: .gitignore  README.md  data.json  main.py  pyproject.toml  ray.py  rooms.json  rt.py  treble.ipynb
generation/results/Simulation_1/: 3330a9ad-20f9-4005-a84a-5c73f0023a7c_GA.h5  3330a9ad-20f9-4005-a84a-5c73f0023a7c_GA.json  simulation_info.json
measurements/: README.md  explore.ipynb  far.py  leo.py  main.ipynb  main.py  only_postprocess.py  pyfar.py  pyproject.toml  test.ipynb
measurements/recordings/ ZW10-2-3/20250509_101714/: rt60_data_new_20250509_101714.csv
measurements/recordings/HO 2-85/20250506_141505/: rt60_data_20250506_141505.csv
measurements/recordings/HO 2-85/20250506_141605/: rt60_data_20250506_141605.csv
measurements/recordings/HO 2-86/20250506_135846/: rt60_data_20250506_135846.csv
measurements/recordings/HO 2-91/20250506_140442/: rt60_data_20250506_140442.csv
measurements/recordings/HO 2-93/20250506_135121/: rt60_data_20250506_135121.csv
measurements/recordings/HO 2-94/20250506_134149/: rt60_data_20250506_134149.csv
measurements/recordings/HO 2-94/20250506_134227/: rt60_data_20250506_134227.csv
measurements/recordings/HO 2-94/20250506_134459/: rt60_data_20250506_134459.csv
measurements/recordings/HO 2-95/20250506_132842/: rt60_data_20250506_132842.csv
measurements/recordings/HO 2-95/20250506_132917/: rt60_data_20250506_132917.csv
measurements/recordings/HO 2-95/20250506_133108/: rt60_data_20250506_133108.csv
measurements/recordings/HO2-75/20250506_135224/: rt60_data_20250506_135224.csv
(+207 files in other folders)
