[project]
name = "generation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "pyfar>=0.7.2",
    "pyrato>=0.4.0",
    "pyroomacoustics>=0.8.3",
    "treble-tsdk",
]

[tool.uv.sources]
treble-tsdk = { path = "deps/treble_tsdk-2.0.21-py3-none-any.whl" }
